# reBot-Isaacsim

./: .gitignore  README.md  README_EN.md  README_ES.md  pyproject.toml
media/renders/: README.md
mjcf/rebot_devarm/: PARITY.md  README.md  build_mjcf.py  parity_all_engines.json  parity_all_engines.py  parity_mujoco_vs_pinocchio.json  parity_mujoco_vs_pinocchio.py  rebot_devarm.xml  scene.xml
mjcf/rebot_devarm/assets/: base_link_convex.stl  gripper_end_convex.stl  gripper_left_convex.stl  gripper_right_convex.stl  link1_convex.stl  link2_convex.stl  link3_convex.stl  link4_convex.stl  link5_convex.stl  link6_convex.stl
reBotArm_Isaacsim/: gravity_joint_sender.py  isaacsim_gripper_force_test.py  isaacsim_ik_sender.py  isaacsim_joint_receiver.py  isaacsim_joint_test_sender.py  isaacsim_probe_gripper_prims.py  isaacsim_traj_sender.py  joint_reader_sender.py  run_gripper_force_test.sh  run_sender.sh
urdf/00-arm-rs_asm-v3/: CMakeLists.txt  package.xml
urdf/00-arm-rs_asm-v3/config/: joint_names_00-arm-rs_asm-v3.yaml
urdf/00-arm-rs_asm-v3/launch/: display.launch  gazebo.launch
urdf/00-arm-rs_asm-v3/urdf/: 00-arm-rs_asm-v3.urdf
usd/RS-rebot-dev-arm/: 00-arm-rs_asm-v3.usda  ISAAC_SIM_CODE.md  VALIDATION.md
usd/RS-rebot-dev-arm/Payload/: Contents.usda  Geometry.usda  Materials.usda  MaterialsLibrary.usdc  Physics.usda
usd/RS-rebot-dev-arm/evidence/: gravity_droop.json  gt_pj_new_newton.json  gt_pj_new_physx.json  physics_fidelity_dynamic_newton.json  physics_fidelity_dynamic_physx.json  physics_fidelity_validation.json  sim_hold_newton.json
(+19 files in other folders)
