[project]
name = "rebot-isaacsim"
version = "0.1.0"
description = "reBotArm + Isaac Sim real-to-simulation joint mirror"
requires-python = ">=3.10"
# third_party/reBotArm_control_py is a vendored snapshot without a build backend,
# so it cannot be installed as a package; the senders import it via sys.path.
# This list mirrors third_party/reBotArm_control_py/pyproject.toml dependencies
# so that `uv sync` / `uv run` anywhere in the workspace provides the sender env.
dependencies = [
    "meshcat>=0.3.2",
    "pin>=3.9.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.10.8",
    "motorbridge>=0.4.9",
]

[tool.uv.workspace]
members = ["third_party/reBotArm_control_py"]
